add other files

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
  </br>
 <input type="checkbox" id="get" name="get" onchange= "getFunction()"/>
    <label for = "get">Ver HTML</label>
-<p id="content"> Sua assinatura HTML</p>
+<p id="html"> Sua assinatura HTML</p>
 </div>
 </div>
 </br>
