write error fix

--- a/index.html
+++ b/index.html
@@ -42,22 +42,22 @@
 </br>
 <div class="row">
  <div id="htmlcode">
-   <div id="signature">
-    <div id="signature-photo">
-     <img style="padding-top: 10px; padding-bottom: 10px; padding-left: 12px;" id="blah" src="#" alt="your image" />
+   <div id="signature" style="width: 600px; height: 80px; border-bottom-color: #680EB5; border-bottom: 1px;">
+    <div id="signature-photo" style="width: 89.11px; height: 80px; float: left;">
+     <img style="padding-top: 10px; padding-bottom: 10px; padding-left: 12px; border-radius: 50%; width: 60px;" id="blah" src="#" alt="your image" />
     </div>
-    <div id="signature-name">
-     <div id="sig-n">
-      <span id="name">Flinston Jhonson</span><br>
-      <span id="position">Seu Cargo </span><br>
-      <span id="email"> flinston.jhonson@configr.com<span>
+    <div id="signature-name" style="font-family: 'Lato', sans-serif; width: 166.89px; height: 80px; float: left;">
+     <div id="sig-n" style="padding-top: 14.19px; width: 100px; height: 50.88px; float: left;">
+      <span id="name" style="font-size: 12px;font-family: 'Lato', sans-serif;color: rgb(104, 14, 181);font-weight: bold;text-align: left;">Flinston Jhonson</span><br>
+      <span id="position" style="font-size: 10px;color: rgb(85, 85, 85);font-weight: bold;text-align: left;">Seu Cargo </span><br>
+      <span id="email" style=" font-size: 10px;font-family: 'Lato', sans-serif;color: rgb(85, 85, 85);text-align: left;"> flinston.jhonson@configr.com<span>
     </div>
     </div>
-    <div id="signature-tel">
-     <div id="sig-t">
-      <span id="tel">+XX XX XXXXXX-XXXX</span><br>
-      <span id="skype">skype</span><br>
-      <span id="linkedin">linkedin</span>
+    <div id="signature-tel" style="font-family: 'Lato', sans-serif; width: 189.78px; height: 80px; float: left;">
+     <div id="sig-t" style="padding-top: 14.8px; width: 104.68px; height: 47px; float: left;">
+      <span id="tel" style=" font-size: 10px;text-align: left;color: rgb(85, 85, 85);">+XX XX XXXXXX-XXXX</span><br>
+      <span id="skype" style="font-size: 10px;color: rgb(85, 85, 85);text-align: left;">skype</span><br>
+      <span id="linkedin" style="font-size: 10px;color: rgb(85, 85, 85);text-align: left;">linkedin</span>
      </div>
    </div>
    <div id="signature-brand">
