Retirada do attr name= da tag span email

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
      <div id="sig-n" style="padding-top: 14.19px; width: 100px; height: 50.88px; float: left;">
       <span id="name" style="font-size: 12px;font-family: 'Lato', sans-serif;color: rgb(104, 14, 181);font-weight: bold;text-align: left;">Flinston Jhonson</span><br>
       <span id="position" style="font-size: 10px;color: rgb(85, 85, 85);font-weight: bold;text-align: left;">Seu Cargo </span><br>
-      <span id="email" name="email" style=" font-size: 10px;font-family: 'Lato', sans-serif;color: rgb(85, 85, 85);text-align: left;"> flinston.jhonson@configr.com<span>
+      <span id="email" style=" font-size: 10px;font-family: 'Lato', sans-serif;color: rgb(85, 85, 85);text-align: left;"> flinston.jhonson@configr.com<span>
     </div>
     </div>
     <div id="signature-tel" style="font-family: 'Lato', sans-serif; width: 189.78px; height: 80px; float: left;">
