--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <label for ="review">Preview</b></label>
 </br>
 </br>
- <div id="source" align="center">
+ <div id="source">
    <div id="signature" style="width: 600px; height: 80px; border-bottom-color: #680EB5; border-bottom: 1px;">
     <div id="signature-photo" style="width: 89.11px; height: 80px; float: left;">
      <img style="padding-top: 10px; padding-bottom: 10px; padding-left: 12px; border-radius: 50%; width: 60px;" id="blah" src="#" alt="your image" />
