Mudança do source das imagens de ícones.

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                     </div>
                     <div id="signature-tel" style="font-family: 'Lato', sans-serif; width: 159.78px; height: 80px; float: left;">
                         <div id="sig-t" style="padding-top: 14.8px; width: 117.68px; height: 47px; float: left;">
-                            <img src="whatsapp.png" style="padding-right: 2px"><span id="tel" style=" font-size: 10px;text-align: left;color: rgb(85, 85, 85);">+XX XX XXXXXX-XXXX</span><br>
-                            <img src="skype.png" style="padding-right: 2px"><span id="skype" style="font-size: 10px;color: rgb(85, 85, 85);text-align: left;">skype</span><br>
-                            <img src="linkedin.png" style="padding-right: 2px"><span id="linkedin" style="font-size: 10px;color: rgb(85, 85, 85);text-align: left;">linkedin</span>
+                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/whatsapp.png" style="padding-right: 2px"><span id="tel" style=" font-size: 10px;text-align: left;color: rgb(85, 85, 85);">+XX XX XXXXXX-XXXX</span><br>
+                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/skype.png" style="padding-right: 2px"><span id="skype" style="font-size: 10px;color: rgb(85, 85, 85);text-align: left;">skype</span><br>
+                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/linkedin.png" style="padding-right: 2px"><span id="linkedin" style="font-size: 10px;color: rgb(85, 85, 85);text-align: left;">linkedin</span>
                         </div>
                     </div>
                     <div id="signature-site" style="font-family: 'Lato', sans-serif; width: 79px; height: 80px; float: left;">
