Mudança na cor e espessura da tag <hr>

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                 </div>
-                <hr style="color: #680EB5; width: 610px;" align="left">
+                <hr style="height:0.05px; color: #680EB5; border-color: #680EB5; background-color: #680EB5;  width: 610px;" align="left">
             </div>
             <br>
         </div>
