Mudança de fonte Lato -> Verdana.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Email signature generator</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/diretrizes.css">
-        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Sans, Verdana" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     </head>
     <body>
@@ -45,26 +45,26 @@
                 <div id="signature-photo" style="width: 89.11px; height: 80px; float: left;">
                     <img style="margin-top: 13.5px; margin-bottom: 10px; margin-left: 12px; border-radius: 50%; width: 60px;" id="blah" src="#" alt="your image" />
                 </div>
-                <div id="signature-name" style="font-family: 'Lato', sans-serif; width: 196.89px; height: 80px; float: left;">
+                <div id="signature-name" style="font-family: 'Sans, Verdana', sans-serif; width: 196.89px; height: 80px; float: left;">
                     <div id="sig-n" style="padding-top: 14.19px; width: 136px; height: 50.88px; float: left;">
-                        <span id="name" style="font-size: 12px;font-family: 'Lato', sans-serif;color: rgb(104, 14, 181);font-weight: bold;text-align: left;">Flinston Jhonson</span><br>
-                        <span id="position" style="font-size: 10px;color: rgb(85, 85, 85);font-weight: bold;text-align: left;">Seu Cargo </span><br>
-                        <span id="email" style="text-decoration:none; font-size: 10px;font-family: 'Lato', sans-serif;color: rgb(85, 85, 85);text-align: left;"> flinston.jhonson@configr.com<span>
+                        <span id="name" style="font-size: 12px;font-family: 'Sans, Verdana', sans-serif;color: rgb(104, 14, 181);font-weight: bold;text-align: left;">Flinston Jhonson</span><br>
+                        <span id="position" style="font-size: 11px;color: rgb(85, 85, 85);font-weight: bold;text-align: left;">Seu Cargo </span><br>
+                        <span id="email" style="text-decoration:none; font-size: 11px;font-family: 'Sans, Verdana', sans-serif;color: rgb(85, 85, 85);text-align: left;"> flinston.jhonson@configr.com<span>
                         </div>
                     </div>
-                    <div id="signature-tel" style="font-family: 'Lato', sans-serif; width: 159.78px; height: 80px; float: left;">
+                    <div id="signature-tel" style="font-family: 'Sans, Verdana', sans-serif; width: 159.78px; height: 80px; float: left;">
                         <div id="sig-t" style="padding-top: 14.8px; width: 117.68px; height: 47px; float: left;">
-                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/whatsapp.png" style="padding-right: 2px"><span id="tel" style=" font-size: 10px;text-align: left;color: rgb(85, 85, 85);">+XX XX XXXXXX-XXXX</span><br>
-                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/skype.png" style="padding-right: 2px"><span id="skype" style="font-size: 10px;color: rgb(85, 85, 85);text-align: left;">skype</span><br>
-                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/linkedin.png" style="padding-right: 2px"><span id="linkedin" style="font-size: 10px;color: rgb(85, 85, 85);text-align: left;">linkedin</span>
+                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/whatsapp.png" style="padding-right: 2px"><span id="tel" style=" font-size: 11px;text-align: left;color: rgb(85, 85, 85);">+XX XX XXXXXX-XXXX</span><br>
+                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/skype.png" style="padding-right: 2px"><span id="skype" style="font-size: 11px;color: rgb(85, 85, 85);text-align: left;">skype</span><br>
+                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/linkedin.png" style="padding-right: 2px"><span id="linkedin" style="font-size: 11px;color: rgb(85, 85, 85);text-align: left;">linkedin</span>
                         </div>
                     </div>
-                    <div id="signature-site" style="font-family: 'Lato', sans-serif; width: 79px; height: 80px; float: left;">
+                    <div id="signature-site" style="font-family: 'Verdana', sans-serif; width: 79px; height: 80px; float: left;">
                         <div id="sig-s" style="margin-top: 60px; height: 12px; float: left; font-size: 10px;">
-                            <a href="https://configr.com" style="color: rgb(85, 85, 85); text-decoration:none"><span>https://configr.com</span></a>
+                            <a href="https://configr.com" style="color: rgb(85, 85, 85); text-decoration:none">https://configr.com</a>
                         </div>
                     </div>
-                    <div id="signature-brand" style="font-family: 'Lato', sans-serif; height: 80px; float: left;">
+                    <div id="signature-brand" style="font-family: 'Sans, Verdana', sans-serif; height: 80px; float: left;">
                         <div align="right" style="padding-left: 19px; padding-top: 55px;">
                            <img src="configr.png"> 
                         </div>
