Mudança de tag <span> -> <a>, inserção do style 'text-decoration:none;', e mudança de fonte Lato -> Verdana.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div id="sig-n" style="padding-top: 14.19px; width: 136px; height: 50.88px; float: left;">
                         <span id="name" style="font-size: 12px;font-family: 'Sans, Verdana', sans-serif;color: rgb(104, 14, 181);font-weight: bold;text-align: left;">Flinston Jhonson</span><br>
                         <span id="position" style="font-size: 11px;color: rgb(85, 85, 85);font-weight: bold;text-align: left;">Seu Cargo </span><br>
-                        <span id="email" style="text-decoration:none; font-size: 11px;font-family: 'Sans, Verdana', sans-serif;color: rgb(85, 85, 85);text-align: left;"> flinston.jhonson@configr.com<span>
+                        <a id="email" style="text-decoration:none; font-size: 11px;font-family: 'Sans, Verdana', sans-serif;color: rgb(85, 85, 85);text-align: left;"> flinston.jhonson@configr.com<span>
                         </div>
                     </div>
                     <div id="signature-tel" style="font-family: 'Sans, Verdana', sans-serif; width: 159.78px; height: 80px; float: left;">
