--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </fieldset>
         </br>
         </br>
-        <input type="checkbox" id="review" name="review" onchange= "reviewFunction()"/>
+        <input type="checkbox" id="review" name="review" onchange= "reviewFunction(); addskype();"/>
         <label for ="review">Preview</b></label>
         </br>
         </br>
