Alteração na função que faz os links dinâmicos da assinatura

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="pt-br" >
     <head>
         <meta charset="UTF-8">
-        <title>Email signature generator</title>
+        <title>Gerador de Assinaturas</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/diretrizes.css">
         <link href="https://fonts.googleapis.com/css?family=Sans, Verdana" rel="stylesheet">
@@ -36,7 +36,7 @@
         </fieldset>
         </br>
         </br>
-        <input type="checkbox" id="review" name="review" onchange= "reviewFunction(); addskype();"/>
+        <input type="checkbox" id="review" name="review" onchange= "reviewFunction(); addlinks();"/>
         <label for ="review">Preview</b></label>
         </br>
         </br>
@@ -49,14 +49,14 @@
                     <div id="sig-n" style="padding-top: 14.19px; width: 136px; height: 50.88px; float: left;">
                         <span id="name" style="font-size: 12px;font-family: 'Sans, Verdana', sans-serif;color: rgb(104, 14, 181);font-weight: bold;text-align: left;">Flinston Jhonson</span><br>
                         <span id="position" style="font-size: 11px;color: rgb(85, 85, 85);font-weight: bold;text-align: left;">Seu Cargo </span><br>
-                      <a id="email" href="" style="text-decoration:none; font-size: 11px;font-family: 'Sans, Verdana', sans-serif;color: rgb(85, 85, 85);text-align: left;"> flinston.jhonson@configr.com</a>
+                      <a id="email" href="" style="text-decoration:none; font-size: 11px;font-family: 'Sans, Verdana', sans-serif;color: rgb(85, 85, 85);text-align: left;">flinston.jhonson@configr.com</a>
                         </div>
                     </div>
                     <div id="signature-tel" style="font-family: 'Sans, Verdana', sans-serif; width: 159.78px; height: 80px; float: left;">
                         <div id="sig-t" style="padding-top: 14.8px; width: 117.68px; height: 47px; float: left;">
-                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/whatsapp.png" style="padding-right: 2px"><span id="tel" style=" font-size: 11px;text-align: left;color: rgb(85, 85, 85);">+XX XX XXXXXX-XXXX</span><br>
+                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/whatsapp.png" style="padding-right: 2px"><a id="tel" href="" style=" font-size: 11px;text-align: left;color: rgb(85, 85, 85); text-decoration:none;">+XX XX XXXXXX-XXXX</a><br>
                             <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/skype.png" style="padding-right: 2px"><a id="skype" href="" style="font-size: 11px;color: rgb(85, 85, 85);text-align: left; text-decoration:none;">skype</a><br>
-                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/linkedin.png" style="padding-right: 2px"><span id="linkedin" style="font-size: 11px;color: rgb(85, 85, 85);text-align: left;">linkedin</span>
+                            <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/linkedin.png" style="padding-right: 2px"><a id="linkedin" href="" style="font-size: 11px;color: rgb(85, 85, 85);text-align: left; text-decoration:none;">linkedin</a>
                         </div>
                     </div>
                     <div id="signature-site" style="font-family: 'Verdana', sans-serif; width: 79px; height: 80px; float: left;">
