Bug Fix Skype x Linkedin

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="text" name="mb" id="mb" required placeholder="+XX XX XXXXX-XXXX">
             <br>
             <label for="skype"><i class="fab fa-skype"></i></label>
-            <input type="text" name="sk" id = "sk" required placeholder="@seu_skype">
+            <input type="text" name="sk" id = "sk" required placeholder="seu_skype">
             <br>
             <label for="linkedin"><i class="fab fa-linkedin"></i></label>
             <input type="text" name="lk" id = "lk" required placeholder="seulinkedin">
