--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div id="signature-brand" style="font-family: 'Sans, Verdana', sans-serif; height: 80px; float: left;">
                         <div align="right" style="padding-left: 19px; padding-top: 55px;">
-                           <img src="configr.png"> 
+                           <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/configr.png"> 
                         </div>
                     </div>
                 </div>
