--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div id="signature-name" style="font-family: 'Sans, Verdana', sans-serif; width: 196.89px; height: 80px; float: left;">
                     <div id="sig-n" style="padding-top: 14.19px; width: 136px; height: 50.88px; float: left;">
-                        <span id="name" style="font-size: 12px;font-family: 'Sans, Verdana', sans-serif;color: rgb(104, 14, 181);font-weight: bold;text-align: left;">Flinston Jhonson</span><br>
+                        <span id="name" style="font-size: 12px;font-family: 'Sans, Verdana', sans-serif;color: #044c7d;font-weight: bold;text-align: left;">Flinston Jhonson</span><br>
                         <span id="position" style="font-size: 11px;color: rgb(85, 85, 85);font-weight: bold;text-align: left;">Seu Cargo </span><br>
                       <a id="email" href="" style="text-decoration:none; font-size: 11px;font-family: 'Sans, Verdana', sans-serif;color: rgb(85, 85, 85);text-align: left;">flinston.jhonson@configr.com</a>
                         </div>
@@ -59,18 +59,13 @@
                             <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/linkedin.png" style="padding-right: 2px"><a id="linkedin" href="" style="font-size: 11px;color: rgb(85, 85, 85);text-align: left; text-decoration:none;">linkedin</a>
                         </div>
                     </div>
-                    <div id="signature-site" style="font-family: 'Verdana', sans-serif; width: 85px; height: 80px; float: left;">
-                        <div id="sig-s" style="margin-top: 60px; height: 12px; float: left; font-size: 10px;">
-                            <a href="https://configr.com" style="color: rgb(85, 85, 85); text-decoration:none">https://configr.com</a>
-                        </div>
-                    </div>
                     <div id="signature-brand" style="font-family: 'Sans, Verdana', sans-serif; height: 80px; float: left;">
-                        <div align="right" style="padding-left: 19px; padding-top: 55px;">
-                           <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/configr.png"> 
+                        <div align="right" style="padding-left: 24px; padding-top: 35px;">
+                           <img src="color.png" style="width: 135px"> 
                         </div>
                     </div>
                 </div>
-                <hr style="height:0.05px; color: #680EB5; border-color: #680EB5; background-color: #680EB5;  width: 610px;" align="left">
+                <hr style="height:0.05px; color: #044c7d; border-color: #044c7d; background-color: #044c7d;  width: 610px;" align="left">
             </div>
             <br>
         </div>
