insert logo croma

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     </div>
                     <div id="signature-brand" style="font-family: 'Sans, Verdana', sans-serif; height: 80px; float: left;">
                         <div align="right" style="padding-left: 24px; padding-top: 35px;">
-                           <img src="color.png" style="width: 135px"> 
+                           <img src="https://raw.githubusercontent.com/adialaleal/gsignature/master/color.png" style="width: 135px"> 
                         </div>
                     </div>
                 </div>
