Update placeholder email

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <input type = "text" name = "pos" id = "pos" required placeholder="Seu cargo aqui com a gente">
             <br/>
             <label for="email"><i class="far fa-envelope"></i></label>
-            <input type="text" name="em" id = "em" required placeholder="seu_email@configr.com">
+            <input type="text" name="em" id = "em" required placeholder="seu_email@cromatecnologia.com.br">
             <br>
             <label for="tel"><i class="fas fa-phone"></i></label>
             <input type="text" name="mb" id="mb" required placeholder="+XX XX XXXXX-XXXX">
